# VolFe

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  batch_calculations.py  calculations.py  equilibrium_equations.py  example_marianas.csv  inputs.csv  isotopes.py  melt_gas.py  model_dependent_variables.py  models.csv  pyproject.toml  running_SCHOFe.ipynb  running_VolFe.ipynb  setup.py
.github/workflows/: main.yml
ARCHIVE/: batch_calculations.py  equilibrium_equations.py  melt_gas.py  model_dependent_variables.py  models.csv  species.csv
Unit_tests/: test_SCSS_ONeill_Smythe.py
benchmarking/: C_S.ipynb  SCAS.ipynb  SCSS copy.ipynb  SCSS.ipynb  equilibrium_constants.ipynb  fugacity_coefficients.ipynb  solubility_functions.ipynb  sulfide=Boulliun22nP.xlsx  sulfide=Boulliung23eq7_sulfate=Boulliung23eq9,Boulliung23eq11.xlsx  sulfur_saturation.ipynb
benchmarking/materials-from-original-papers/: hydrogen sulfide=Basalt_Hughes24,Andesite_Hughes24.xlsx  sulfate,KSOg2=ONeill22.xlsx  sulfide,SCSS=ONeill21.xlsx  sulfide=Boulliung23eq7_sulfate=Boulliung23eq9,Boulliung23eq11.xlsx
docs/: add_your_own.rst  batch_calculations.rst  calculations.rst  code_structure.rst  conf.py  current_mdv.rst  dependencies.rst  equilibrium_equations.rst  index.rst  introduction.rst  melt_gas.rst  model_dependent_variables.rst  mv_combo.rst  options.rst  references.rst  requirements.txt  worked_example_degas.rst  worked_example_other.rst  worked_example_oxys.rst  worked_example_pvsat.rst  worked_example_realdata.rst  worked_examples_pvsat
docs/API/: melt_gas.rst
docs/Examples/: 1a. pvsat 1MI_df.ipynb  1b. pvsat csv.ipynb  1c. pvsat user_opt.ipynb  1d. pvsat X.ipynb  2a. degas_closed_bulk.ipynb  2b. degas_closed_gas.ipynb  2c. degas_open.ipynb  2d. regas.ipynb  3b. SfO2 csv.ipynb  (+15 more)
notebooks/: Untitled.ipynb  plotting_VolFe_examples.ipynb  running_VolFe.ipynb
tests/: conftest.py  test_S2fO2_functions.py  test_SCSS_ONeill_Smythe.py  test_degassing_functions.py  test_model_options.py  test_other_functions.py  test_pvsat_functions.py  test_user_warnings.py
workflows/: main.yml
(+45 files in other folders)
